# memc

./: .gitignore  meson.build  notes.txt
src/: memc.c
